// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders correctly 1`] = `
Array [
  <div
    className="css-xs1m8z"
  >
    <nav>
      <div
        className="css-4cffwv"
      >
        <div
          className="css-qt71f4"
        >
          <a
            css={
              Object {
                "map": undefined,
                "name": "1ggai7v",
                "next": undefined,
                "styles": "
              text-decoration: none;
            ",
                "toString": [Function],
              }
            }
            href="/"
          >
            <h3
              css={
                Object {
                  "map": undefined,
                  "name": "1n6x3hh",
                  "next": undefined,
                  "styles": "
                margin: 0;
                line-height: 1.5;
              ",
                  "toString": [Function],
                }
              }
            >
              Cool Site Title
            </h3>
          </a>
        </div>
        <div
          className="css-h9fdzh"
        >
          <a
            href="/about/"
          >
            About
          </a>
        </div>
      </div>
    </nav>
  </div>,
  <div
    className="css-1ba6x1c"
  />,
  <div
    className="css-1yrmf69"
  >
    <footer>
      <div
        className="css-dxwf3u"
      >
        <div
          className="css-qt71f4"
        >
          <span>
            © Blake Lundquist 
            2020
          </span>
        </div>
        <div
          className="css-h9fdzh"
        >
          <ul
            css={
              Object {
                "map": undefined,
                "name": "47y1c9",
                "next": undefined,
                "styles": "
              margin: 0;
              list-style: none;
              padding: 0;
            ",
                "toString": [Function],
              }
            }
          >
            <li>
              <a
                href="mailto:blake@blakelundquist.dev?subject=A new resource for theresources.dev!"
              >
                Recommend a resource
              </a>
            </li>
            <li>
              <a
                href="https://github.com/BlakeEric/the-resources"
                rel="noopener noreferrer"
                target="_blank"
              >
                View source code for this website
              </a>
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>,
]
`;

exports[`Layout renders correctly with children 1`] = `
Array [
  <div
    className="css-xs1m8z"
  >
    <nav>
      <div
        className="css-4cffwv"
      >
        <div
          className="css-qt71f4"
        >
          <a
            css={
              Object {
                "map": undefined,
                "name": "1ggai7v",
                "next": undefined,
                "styles": "
              text-decoration: none;
            ",
                "toString": [Function],
              }
            }
            href="/"
          >
            <h3
              css={
                Object {
                  "map": undefined,
                  "name": "1n6x3hh",
                  "next": undefined,
                  "styles": "
                margin: 0;
                line-height: 1.5;
              ",
                  "toString": [Function],
                }
              }
            >
              Cool Site Title
            </h3>
          </a>
        </div>
        <div
          className="css-h9fdzh"
        >
          <a
            href="/about/"
          >
            About
          </a>
        </div>
      </div>
    </nav>
  </div>,
  <div
    className="css-1ba6x1c"
  >
    <main>
      <h1>
        I'm a child!
      </h1>
    </main>
  </div>,
  <div
    className="css-1yrmf69"
  >
    <footer>
      <div
        className="css-dxwf3u"
      >
        <div
          className="css-qt71f4"
        >
          <span>
            © Blake Lundquist 
            2020
          </span>
        </div>
        <div
          className="css-h9fdzh"
        >
          <ul
            css={
              Object {
                "map": undefined,
                "name": "47y1c9",
                "next": undefined,
                "styles": "
              margin: 0;
              list-style: none;
              padding: 0;
            ",
                "toString": [Function],
              }
            }
          >
            <li>
              <a
                href="mailto:blake@blakelundquist.dev?subject=A new resource for theresources.dev!"
              >
                Recommend a resource
              </a>
            </li>
            <li>
              <a
                href="https://github.com/BlakeEric/the-resources"
                rel="noopener noreferrer"
                target="_blank"
              >
                View source code for this website
              </a>
            </li>
          </ul>
        </div>
      </div>
    </footer>
  </div>,
]
`;
